attempting to fix issue where portrait images don't cover entire screen on mobile

--- a/css/weather.css
+++ b/css/weather.css
@@ -1,5 +1,6 @@
 html {
   background: none;
+  height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
